:art: 반응형 작성.
반응형 작성.

--- a/index.html
+++ b/index.html
@@ -104,24 +104,26 @@
                     <video src="./assets/images/HOME_WEB_PINEA.mp4" muted autoplay loop></video>
                 </div>
             </section>
-            <div class="bottom-arrow" data-parallax-y="250px">
+            <div class="bottom-arrow" data-parallax-y="250px" data-mobile-y="75px">
                 <img src="./assets/images/arrow-hero.svg" alt="아래로이동">
             </div>
             <section class="inner2">
                 <div class="inner">
-                    <h2 class="headline" data-parallax-y="250px">
+                    <h2 class="headline" data-parallax-y="250px" data-mobile-y="-75px">
                         <span class="brown-color">SIGLOS</span> DE HISTORIA
                     </h2>
-                    <div class="img-wrap" data-parallax-y="150px">
+                    <div class="img-wrap" data-parallax-y="150px" data-mobile-x="100px">
                         <img src="./assets/images/Siglos-de-Historia.webp" alt="PINEA 나무이미지">
                     </div>
                 </div>
             </section>
             <div class="inner3">
                 <div class="inner">
-                    <h2 class="headline" data-parallax-y="100px"><span class="brown-color">AÑOS</span> DE CRIANZA</h2>
+                    <h2 class="headline" data-parallax-y="100px" data-mobile-x="50px"><span
+                            class="brown-color">AÑOS</span>
+                        DE CRIANZA</h2>
                     <section class="area-top">
-                        <div class="img-content" data-parallax-y="250px">
+                        <div class="img-content" data-parallax-y="250px" data-mobile-y="-50px">
                             <img src="./assets/images/Anos-de-crianza.webp" alt="PINEA 제품이미지">
                         </div>
                         <div class="empty"></div>
@@ -130,10 +132,10 @@
                     </section>
                     <section class="area-middle">
                         <div class="empty"></div>
-                        <div class="img-content" data-parallax-y="250px">
+                        <div class="img-content" data-parallax-y="250px" data-mobile-x="50px">
                             <img src="./assets/images/minutos-placer-pinea.webp" alt="PINEA 와인이미지">
                         </div>
-                        <h3 class="headline" data-parallax-y="-400px">
+                        <h3 class="headline" data-parallax-y="-400px" data-mobile-x="-50px">
                             <span class="brown-color">MOMEN­TOS</span> QUE DURAN PARA <span
                                 class="brown-color">SIEMPRE</span>
                         </h3>
@@ -143,7 +145,7 @@
                         <h3 class="headline">
                             ESTO ES PINEA
                         </h3>
-                        <div class="img-content" data-parallax-y="-250px">
+                        <div class="img-content" data-parallax-y="-250px" data-mobile-y="0px">
                             <img src="./assets/images/Esto-es-Pinea.webp" alt="PINEA 나무이미지">
                         </div>
                     </section>
@@ -153,7 +155,7 @@
                 <section class="inner4">
                     <div class="group-txt">
                         <div class="txt-area">
-                            <h2 class="headline" data-parallax-x="-100px">
+                            <h2 class="headline" data-parallax-x="-100px" data-mobile-x="-100px">
                                 La historia de Pinea se forja con un propósito: <span class="brown-color">crear uno de
                                     los</span><br class="">
                                 <span class="brown-color">mejores vinos del mundo</span> y reflejar la mejor expresión
@@ -170,7 +172,7 @@
                 </section>
                 <section class="inner5">
                     <div class="inner">
-                        <div class="text-area" data-parallax-y="100px">
+                        <div class="text-area" data-parallax-y="100px" data-mobile-y="50px">
                             <h2 class="headline">
                                 Vinos de autor elaborados con <span class="brown-color">alma, visión y profundo
                                     respeto</span>
@@ -281,10 +283,10 @@
             <div data-theme-offset>
                 <section class="inner6">
                     <div class="inner">
-                        <div class="title-area">
+                        <div class="title-area" data-mobile-x="-25px">
                             <h2 class="headline">EL VALOR DEL <span class="brown-color">TERROIR</span></h2>
                         </div>
-                        <div class="txt-area">
+                        <div class="txt-area" data-mobile-y="25px">
                             <p class="Top-text">Un vino tan excepcional sólo puede producirse en un lugar único</p>
                             <p class="middle-text">El Dominio de Pinea se ubica en la zona norte de la Ribera del Duero
                                 (España), donde la
@@ -293,7 +295,7 @@
                                 uva Tempranillo
                                 deslumbra como en ninguna otra parte del mundo.</p>
                             <a href="#" class="link-more">
-                                <span>Descubre el dominio de <br>pinea</span>
+                                <span>Descubre el dominio de <br class="none">pinea</span>
                             </a>
                         </div>
                         <div class="empty"></div>
@@ -321,12 +323,12 @@
                     </div>
                 </section>
                 <section class="inner7">
-                    <div class="title-wrap" data-parallax-y="100px">
+                    <div class="title-wrap" data-parallax-y="100px" data-mobile-y="25px">
                         <h2 class="headline">El vino representa una cultura, y Pinea <span class="brown-color">una forma
                                 de
                                 vivir.</span></h2>
                     </div>
-                    <div class="txt-area" data-parallax-y="100px">
+                    <div class="txt-area" data-parallax-y="100px" data-mobile-y="0">
                         <p class="desc">Todo lo que hacemos en Pinea nace desde el corazón. El vino es para nosotros un
                             destino
                             de vida, un
@@ -337,12 +339,13 @@
                         </a>
                     </div>
                     <div class="empty"></div>
-                    <div class="img-wrap" data-parallax-x="200px">
+                    <div class="img-wrap" data-parallax-x="200px" data-mobile-x="200px">
                         <img src="./assets/images/club-home-pinea-1024x576.webp" alt="Pinea 술통 이미지">
                     </div>
                 </section>
                 <section class="inner8">
-                    <h2 class="headline" data-parallax-x="-100px">Premiados por <span class="brown-color">nuestra
+                    <h2 class="headline" data-parallax-x="-100px" data-mobile-x="-100px">Premiados por <span
+                            class="brown-color">nuestra
                             determinación.</span></h2>
                     <div class="swiper">
                         <div class="swiper-wrapper">
