:memo: 동영상 파일 교체.
동영상 파일 교체.

--- a/index.html
+++ b/index.html
@@ -101,9 +101,7 @@
             <section class="inner1">
                 <h2 class="blind">PINEA 영상페이지</h2>
                 <div class="bg-frame">
-                    <video
-                        src="https://rr2---sn-npoldn76.c.drive.google.com/videoplayback?expire=1702883135&ei=D8V_ZYzZBoOHp84P0OOV4AY&ip=2001:2d8:ed32:72e:4459:4c00:38c0:13cc&id=a08bbc2c746dce1e&itag=37&source=webdrive&requiressl=yes&xpc=EghonaK1InoBAQ==&sc=yes&ttl=transient&susc=dr&driveid=14WG0EGyW4-EnSOCvdzLR0-heXT6JhGu_&app=explorer&eaua=WIug9EHVF8Q&mime=video/mp4&vprv=1&prv=1&dur=40.286&lmt=1702872327072454&subapp=DRIVE_WEB_FILE_VIEWER&txp=0001224&sparams=expire,ei,ip,id,itag,source,requiressl,xpc,ttl,susc,driveid,app,eaua,mime,vprv,prv,dur,lmt&sig=AJfQdSswRQIgbL1QTR3pIG3O_znIOqu4Om41nsAGkw8u_-hAwjQiryUCIQCQUIKQaaiFvotBHZR5W4HTjayzUBjS-AVYs4wnPNE0Lg==&cpn=uZLYIKZITI-4seKI&c=WEB_EMBEDDED_PLAYER&cver=1.20231212.01.00&redirect_counter=1&cm2rm=sn-3pmsd7l&fexp=24350137,24350145,24350147&req_id=a51d438e2c6f36e2&cms_redirect=yes&cmsv=e&mh=uC&mm=34&mn=sn-npoldn76&ms=ltu&mt=1702872050&mv=m&mvi=2&pl=45&lsparams=mh,mm,mn,ms,mv,mvi,pl,sc&lsig=AAO5W4owRgIhALGvURDV8Ujb1SEx_QfbCRLJXHJtvTY8TPQq1cGOcFDLAiEAz0zw_U_h43jphs3K-LKi3PqmRpst259M5hVs4Mv-LYw%3D"
-                        muted autoplay loop></video>
+                    <video src="./assets/images/HOME_WEB_PINEA.mp4" muted autoplay loop></video>
                 </div>
             </section>
             <div class="bottom-arrow" data-parallax-y="250px" data-mobile-y="75px">
